--- a/APCore/appsettings.json
+++ b/APCore/appsettings.json
@@ -14,7 +14,9 @@
     "AdminPassword": "Magu1359"
   },
   "ConnectionStrings": {
-    "EPDB": "Server=185.141.132.14;Initial Catalog=ppa_cspn;Persist Security Info=False;User ID=vahid;Password=Atrina1359@aA;"
+    //"EPDB": "Server=185.141.132.14;Initial Catalog=ppa_cspn;Persist Security Info=False;User ID=vahid;Password=Atrina1359@aA;"
+    "EPDB": "Server=65.21.14.236;Initial Catalog=ppa_varesh;Persist Security Info=False;User ID=sa;Password=Atrina1359;"
+
   },
   "WeatherUrls": {
     "SIGWX_ADDS": "https://www.aviationweather.gov/data/iffdp/",
