--- a/APLib/appsettings.json
+++ b/APLib/appsettings.json
@@ -14,6 +14,6 @@
     "AdminPassword": "Magu1359"
   },
   "ConnectionStrings": {
-    "EPDB": "Server=185.141.132.14;Initial Catalog=ppa_cspn;Persist Security Info=False;User ID=vahid;Password=Atrina1359@aA;"
+    "EPDB": "Server=185.141.132.14;Initial Catalog=ppa_cspn;Persist Security Info=False;User ID=vahid;Password=Atrina1359@aA;",
   }
 }
